--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.11",
+        "@vitejs/plugin-vue": "^6.0.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "laravel-vite-plugin": "^1.3.0",
+        "pinia": "^3.0.3",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.11",
+        "vite": "^6.3.5",
+        "vue": "3.5",
+        "vue-router": "^4.5.1"
+    },
+    "dependencies": {
+        "@fontsource/inter": "^5.2.6"
     }
 }
