--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.1",
         "laravel/telescope": "^5.13",
         "laravel/tinker": "^2.10.1",
+        "openai-php/client": "^0.14.0",
         "openai-php/laravel": "^0.14.0"
     },
     "require-dev": {
