--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         "laravel/telescope": "^5.13",
         "laravel/tinker": "^2.10.1",
         "openai-php/client": "^0.14.0",
-        "openai-php/laravel": "^0.14.0"
+        "openai-php/laravel": "^0.14.0",
+        "phpoffice/phpword": "^1.4",
+        "smalot/pdfparser": "^2.12",
+        "spatie/pdf-to-image": "^1.2",
+        "spatie/pdf-to-text": "^1.54"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
